--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <body>
   <!-- main game file-->
   <div id="game-canvas"></div>
-  <script src="dist/round-the-world-game.min.js"></script>
-  <script src="main.js"></script>
+  <script src="lib/round-the-world-game.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
